upgrade gradle/java + increase test coverage